--- a/web/package.json
+++ b/web/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "scripts": {
     "start": "vite",
-    "dev": "vite build --watch",
-    "build": "vite build",
+    "dev": "tsc && vite build --watch",
+    "build": "tsc && vite build",
     "serve": "vite preview"
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^18.15.11",
     "typescript": "^4.9.5",
     "vite": "^4.1.1",
     "vite-plugin-solid": "^2.5.0"
