--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,9 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^18.15.11",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.1",
     "typescript": "^4.9.5",
     "vite": "^4.1.1",
     "vite-plugin-solid": "^2.5.0"
